# epic

./: .gitignore  README.md
epic-backend/: .env.example  alembic.ini  pyproject.toml
epic-backend/app/: config.py  database.py  dependencies.py  main.py  models.py
epic-backend/app/core/: daily_snapshot_loop.py  exceptions.py  notification_retry_loop.py  rate_limit.py  rbac.py  security.py  sla.py  sla_scanner.py  sla_scanner_loop.py  time.py
epic-backend/app/modules/audit/: models.py  router.py  schemas.py  service.py
epic-backend/app/modules/auth/: router.py  service.py  teams_config.py
epic-backend/app/modules/catalogue/: models.py  router.py  schemas.py  seed.py  seed_catalogue.py  seed_data.py  service.py
epic-backend/app/modules/knowledge_base/: models.py  router.py  schemas.py  service.py
epic-backend/app/modules/notifications/: models.py  router.py  (+3 more)
epic-backend/migrations/: env.py
epic-backend/migrations/versions/: 0001_initial.py  0002_ticket_type.py  0003_session_version.py  0004_audit_ticket_id_nullable.py  0005_ticket_sla_due_at.py  0006_add_sla_escalation_columns.py  0007_notification_retry_columns.py  0008_catalogue_tables.py  0009_user_ticket_spec1_fields.py  0010_ticket_workflow_status.py  0011_daily_group_snapshot.py
epic-backend/scripts/: seed_demo.py  seed_kb.py
epic-backend/tests/: conftest.py  test_api_fixes.py  test_attachments.py  test_business_hours_sla.py  test_immediate_fixes.py  test_remediation.py  test_security_remediation.py  test_sla_wiring.py  test_state_machine.py  test_workflow_state_machine.py  test_workflow_status.py
(+55 files in other folders)
