[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "epic-backend"
version = "1.0.0"
description = "EPIC v1 — Enterprise Platform for Intelligent IT Collaboration (backend)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.6",
  "email-validator>=2.2",
  "pydantic-settings>=2.2",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "authlib>=1.3",
  "itsdangerous>=2.1",
  "python-jose[cryptography]>=3.3",
  "pyodbc>=5.1; platform_system != 'Emscripten'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[tool.setuptools.packages.find]
include = ["app*"]
